Switch exempt by percentage with exempt by amount

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1083,7 +1083,7 @@ error.ExemptionsGenerationRequestFile.student.name.required=Linha {0}: O nome do
 error.ExemptionsGenerationRequestFile.degree.code.required=Linha {0}: O código do curso é obrigatório.
 error.ExemptionsGenerationRequestFile.execution.year.required=Linha {0}: O ano lectivo é obrigatório.
 error.ExemptionsGenerationRequestFile.treasuryEvent.required=Linha {0}: A dívida académica é obrigatória.
-error.ExemptionsGenerationRequestFile.percentageValue.required=Linha {0}: A percentagem (%) é obrigatória.
+error.ExemptionsGenerationRequestFile.amountToExempt.required=Linha {0}: O montante a isentar é obrigatório.
 error.ExemptionsGenerationRequestFile.reasonValue.required=Linha {0}: O motivo é obrigatório.
 error.ExemptionsGenerationRequestFile.student.number.invalid=Linha {0}: O número do aluno <strong>{1}</strong> é inválido.
 error.ExemptionsGenerationRequestFile.degree.invalid=Linha {0}: O código do curso <strong>{1}</strong> é inválido.
@@ -1095,10 +1095,11 @@ error.ExemptionsGenerationRequestFile.found.more.than.one.treasuryEvent=Linha {0
 error.ExemptionsGenerationRequestFile.treasuryEvent.invalid=Linha {0}: A dívida académica com a designação <strong>{1}</strong> não foi encontrada.
 error.ExemptionsGenerationRequestFile.debitEntry.invalid=Linha {0}: O item de dívida com a designação <strong>{1}</strong> não foi encontrado no evento académico <strong>{2}</strong>.
 error.ExemptionsGenerationRequestFile.debitEntry.found.more.than.one=Linha {0}: Foi encontrada mais do que um item de dívida com a designação <strong>{1}</strong> no evento académico <strong>{2}</strong>.
-error.ExemptionsGenerationRequestFile.percentage.invalid=Linha {0}: A percentagem <strong>{1}</strong> é inválida.
+error.ExemptionsGenerationRequestFile.amountToExempt.invalid=Linha {0}: O montante a isentar <strong>{1}</strong> é inválido.
 error.ExemptionsGenerationRequestFile.installmentOrder.invalid=Linha {0}: A prestação de propina <strong>{1}</strong> é inválida.
 error.ExemptionsGenerationRequestFile.installmentOrders.required=Linha {0}: Para a dívida de propina de matrícula é obrigatório especificar pelo menos uma prestação.
 error.ExemptionsGenerationRequestFile.installmentOrder.debit.entries.found.more.than.one=Linha {0}: Foi encontrada mais do que uma dívida para a prestação de propina <strong>{1}</strong>.
+error.ExemptionsGenerationRequestFile.installmentOrder.debit.entries.not.found=Linha {0}: Não foram encontradas dívidas para a prestação de propina <strong>{1}</strong>.
 error.ExemptionsGenerationRequestFile.registration.not.found=Linha {0}: Não foi encontrada uma matrícula activa para o aluno <strong>{1}</strong> para o curso <strong>[{2}] {3}</strong>.
 error.ExemptionsGenerationRequestFile.invalid.sheet=A folha é inválida.
 error.ExemptionsGenerationRequestFile.result.empty=A folha não tem nenhuma isenção a lançar.
@@ -1122,7 +1123,7 @@ label.ExemptionsGenerationRequestFile.studentName=Nome
 label.ExemptionsGenerationRequestFile.degree=Curso
 label.ExemptionsGenerationRequestFile.exemption.summary=Sumário das isenções
 label.ExemptionsGenerationRequestFile.treasuryEvent=Dívida Académica
-label.ExemptionsGenerationRequestFile.discountPercentage=Percentagem (%)
+label.ExemptionsGenerationRequestFile.amountToExempt=Montante a isentar
 label.ExemptionsGenerationRequestFile.reason=Motivo
 label.ExemptionsGenerationRequestFile.debitEntry=Item de dívida
 label.ExemptionsGenerationRequestFile.discountAmount=Desconto aplicado
