Add registration number and erp certification document number to treasury reports

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -728,6 +728,7 @@ label.DebtReportEntryBean.header.vatNumber = NIF
 label.DebtReportEntryBean.header.email = Email
 label.DebtReportEntryBean.header.address = Morada
 label.DebtReportEntryBean.header.studentNumber = Nº aluno
+label.DebtReportEntryBean.header.registrationNumber=Nº matrícula
 label.DebtReportEntryBean.header.degreeType = Tipo de Curso
 label.DebtReportEntryBean.header.degreeCode = Cód. Curso
 label.DebtReportEntryBean.header.degreeName = Curso
@@ -760,7 +761,9 @@ label.DebtReportEntryBean.header.documentAnnuledReason=Razão da anulação
 label.DebtReportEntryBean.header.closeDate=Data de fecho
 label.DebtReportEntryBean.header.openAmountAtERPStartDate=Montante em aberto (01/01/2017)
 label.DebtReportEntryBean.header.exportedInLegacyERP=Exportado no ERP anterior
+label.DebtReportEntryBean.header.legacyERPCertificateDocumentReference=Nº documento certificado no ERP anterior
 label.DebtReportEntryBean.header.erpCertificationDate=Data certificação ERP
+label.DebtReportEntryBean.header.erpCertificateDocumentReference=Nº documento ERP
 label.DebtReportEntryBean.header.originSettlementNoteForAdvancedCredit=Origem do adiantamento
 
 # DebtReportRequest
