Throw exception when tariff is not found for academic service request which is payable

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -397,6 +397,7 @@ info.EmolumentServices.serviceRequest.change.value.anull.debit.entries=A dívida 
 error.EmolumentServices.academicServiceRequest.paymentCodePool.is.required=Erro ao tentar gerar um código de pagamento, falta definir o intervalo de códigos de pagamento. 
 error.EmolumentServices.academicServiceRequest.amount.equals.to.zero=Erro ao tentar criar um emolumento com uma divida igual a zero.
 error.EmolumentServices.emoluments.product.group.not.defined=As configurações da tesouraria académica não estão todas configuradas, falta configurar o grupo dos emolumentos.
+error.EmolumentServices.tariff.not.found=Não foi encontrado nenhum tarifário activo na data {0}.
 
 ### TuitionPaymentPlanGroup ###
 
