Add two new fields related to payor debt accounts to debt entries report

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -747,6 +747,8 @@ label.DebtReportEntryBean.header.amountToPay = Montante da dívida
 label.DebtReportEntryBean.header.openAmountToPay = Montante em aberto
 label.DebtReportEntryBean.header.amountToCredit = Montante do acerto
 label.DebtReportEntryBean.header.openAmountToCredit = Montante em aberto
+label.DebtReportEntryBean.header.payorDebtAcount.vatNumber=Nº Fiscal Conta Pagadora
+label.DebtReportEntryBean.header.payorDebtAcount.name=Nome Conta Pagadora
 label.DebtReportEntryBean.header.agreement = Acordo
 label.DebtReportEntryBean.header.ingression = Ingresso
 label.DebtReportEntryBean.header.firstTimeStudent = 1º ano 1º vez
