In Academic debt generation rule add option to ensure that all debit entries of treasury event are the same of the products specified in rule. This rule is necessary to ensure that all tuition installments are in one invoice.

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -23,6 +23,7 @@ label.event.create=Criar
 label.event.delete=Remover
 label.event.upload=Upload
 label.event.add=Adicionar
+label.event.selectAll=Selecionar todos
 label.annull=Anular
 label.true=Sim
 label.false=Não
@@ -528,6 +529,7 @@ label.AcademicDebtGenerationRule.background.executed=Executado periódicamente
 label.AcademicDebtGenerationRule.background.not.executed=Executado apenas a pedido
 label.AcademicDebtGenerationRule.academicTaxDueDateAlignmentType=Uniformizar data de vencimento de taxas académicas
 label.AcademicDebtGenerationRule.debtGenerationRuleRestriction=Restrição
+label.AcademicDebtGenerationRule.eventDebitEntriesMustEqualRuleProducts=Garantir a agregação de todas as dívidas do mesmo evento académico
 
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
