Option to choose degree curricular plans without execution on tuition payment plan creation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -245,6 +245,7 @@ label.TuitionPaymentPlan.standalone=Curriculares isoladas
 label.TuitionPaymentPlan.extracurricular=Extracurriculares
 label.TuitionPaymentPlan.degreeCurricularPlan=Plano curricular
 label.TuitionPaymentPlan.maximumAmount=Montante Máximo
+label.TuitionPaymentPlan.showAllDcps=Mostrar todos os planos curriculares
 
 label.TuitionPaymentPlan.copy.success=O plano de propinas foi copiado com sucesso.
 
