Validate properties of tuition payment plan, on academic act block suspension and academic block on debt before due date Set content length for download excel files Save entity payor debt account info on debit entries generated by tuitions

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -171,6 +171,7 @@ label.AcademicTreasuryEventKeys.FINAL_AMOUNT=Montante final
 label.AcademicTreasuryEventKeys.TUITION_CALCULATION_TYPE=Forma de cálculo
 label.AcademicTreasuryEventKeys.TUITION_PAYMENT_PLAN=Plano de propinas
 label.AcademicTreasuryEventKeys.TUITION_PAYMENT_PLAN_CONDITIONS=Condições do plano de propinas
+label.AcademicTreasuryEventKeys.TUITION_PAYOR_DEBT_ACCOUNT=Conta pagadora
 label.AcademicTreasuryEventKeys.FIXED_AMOUNT=Montante fixo
 label.AcademicTreasuryEventKeys.ECTS_CREDITS=Créditos ECTS
 label.AcademicTreasuryEventKeys.AMOUNT_PER_ECTS=Montante por ECTS
@@ -348,6 +349,8 @@ error.TuitionInstallmentTariff.default.payment.plan.not.defined=O plano de propi
 error.TuitionInstallmentTariff.defaultPaymentPlanCourseFunctionCostIndexed.not.supported.for.registrationTuition=O cálculo por custo de funcionamento da disciplina não é suportado em propinas de matrícula.
 error.TuitionInstallmentTariff.courseFunctionCourse.not.defined=O custo de funcionamento para a disciplina não está definido.
 error.TuitionInstallmentTariff.maximum.amount.required=Na propina do curso <strong>{0}  - {1}</strong> o valor máximo é obrigatório e deverá ser positivo.
+error.TuitionInstallmentTariff.cannot.suspend.and.also.block.academical.acts.on.debt.detailed=Não é possível que a prestação <strong>{0}</strong> tenha as propriedades <strong>Bloquear actos académicos</strong> com o valor <strong>Não</strong> e <strong>Bloqueia actos académicos antes do vencimento</strong> com o valor <strong>Sim</strong>.
+error.TuitionInstallmentTariff.cannot.suspend.and.also.block.academical.acts.on.debt=Não é possível que a prestação tenha as propriedades <strong>Bloquear actos académicos</strong> com o valor <strong>Não</strong> e <strong>Bloqueia actos académicos antes do vencimento</strong> com o valor <strong>Sim</strong>.
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
