* Changed tuition information for ERP model  - Tuition info type is configured by execution year  - Tuition info type contains academic information entries as degree type, degree or degree curricular plan  - Tuition info type contains a set of tuition products in which applies, to support international students tuitions
* Improved UI
* In PersonCustomer use getAssociatedPerson to retrieve the active person or inactive.

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1140,12 +1140,24 @@ label.ExemptionsGenerationRequestFile.reason=Motivo
 label.ExemptionsGenerationRequestFile.debitEntry=Item de dívida
 label.ExemptionsGenerationRequestFile.discountAmount=Desconto aplicado
 
+# ERPTuitionInfoType
+label.ERPTuitionInfoType.title=Especializações de propina
+label.ERPTuitionInfoType.code=Código
+label.ERPTuitionInfoType.name=Designação
+label.ERPTuitionInfoType.active=Activo
+label.ERPTuitionInfoType.degreeInformation=Aplicado aos cursos:
+label.ERPTuitionInfoType.tuitionProducts=Aplicado aos produtos
+
+# ERPTuitionInfoTypeAcademicEntry
+label.ERPTuitionInfoTypeAcademicEntry.standalone.description=Unidades curriculares isoladas
+label.ERPTuitionInfoTypeAcademicEntry.extracurricular.description=Unidades extracurriculares
+
 # ERPTuitionInfo
 
 label.ERPTuitionInfo.title=Exportação de montantes de propinas
 label.ERPTuitionInfo.create.title=Exportar montante de propina
+label.ERPTuitionInfo.search=Consultar exportações
 
-label.ERPTuitionInfo.create=Exportar montante de propina
 label.ERPTuitionInfo.search.pending.documents=Montantes pendentes
 
 label.ERPTuitionInfo.fromDate=De
@@ -1168,12 +1180,21 @@ label.ERPTuitionInfo.exportationSuccess=Sucesso
 label.ERPTuitionInfo.customer=Cliente
 label.ERPTuitionInfo.data=Dados
 label.ERPTuitionInfo.logs=Logs
-label.ERPTuitionInfo.erpTuitionInfoType=Tipo de propina
+label.ERPTuitionInfo.erpTuitionInfoType=Especialização de propina
+label.ERPTuitionInfo.vat.number=Nº Fiscal
+label.ERPTuitionInfo.integrationState=Status da integração
+
+label.ERPTuitionInfo.is.pending.to.export=Pendente de exportação
+label.ERPTuitionInfo.is.success.true=Sucesso
+label.ERPTuitionInfo.is.success.false=Insucesso
 
 # ERPTuitionInfoExportOperation
 
 error.ErpTuitionInfo.no.differences.from.last.successul.exportation=Não há diferenças sobre a ultima exportação enviada com sucesso.
 error.ERPTuitionInfo.customer.not.student=O cliente não é aluno.
+
+error.ERPTuitionInfo.executionYear.requireD=O ano lectivo é obrigatório.
+error.ERPTuitionInfo.erpTuitionInfoType.required=A especialização de propina é obrigatória.
 
 label.ERPTuitionInfoExportOperation.fromDate=De
 label.ERPTuitionInfoExportOperation.toDate=A
