Annull pending erp tuition info when the new delta has diference on signal

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1187,7 +1187,7 @@ label.ERPTuitionInfo.lastExportationLog=Log da última exportação
 
 label.ERPTuitionInfo.is.pending.to.export=Pendente de exportação
 label.ERPTuitionInfo.is.success.true=Sucesso
-label.ERPTuitionInfo.is.success.false=Insucesso
+label.ERPTuitionInfo.is.success.false=Anulado
 
 # ERPTuitionInfoExportOperation
 
@@ -1243,6 +1243,10 @@ label.ErpTuitionInfoCreationReportFile.title=Lançamentos de especializações auto
 label.ErpTuitionInfoCreationReportFile.creationDate=Data de execução
 label.ErpTuitionInfoCreationReportFile.file=Listagem
 label.ERPTuitionInfoCreationReportFile.filename=EspecializacoesAutomaticas_{0}.xlsx
+
+label.ERPTuitionInfo.cancelExportation.delta.zero=A exportação pendente anulada pela nova diferença calculada igual a zero.
+label.ERPTuitionInfo.cancelExportation.delta.positive.but.pending.exportation.negative=A exportação pendente anulada pela nova diferença calculada com valor positivo e a actual com valor negativo.
+label.ERPTuitionInfo.cancelExportation.delta.negative.but.pending.exportation.positive=A exportação pendente anulada pela nova diferença calculada com valor negativo e a actual com valor positivo.
 
 label.accounting.manageCustomer.download.certified.document.DEBIT_NOTE=Imprimir factura
 label.accounting.manageCustomer.download.certified.document.CREDIT_NOTE=Imprimir nota de crédito
