Common strategies for massive debt generation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1202,3 +1202,34 @@ label.accounting.manageCustomer.download.certified.document.DEBIT_NOTE=Imprimir 
 label.accounting.manageCustomer.download.certified.document.CREDIT_NOTE=Imprimir nota de crédito
 label.accounting.manageCustomer.download.certified.document.SETTLEMENT_NOTE=Imprimir recibo
 label.accounting.manageCustomer.download.certified.document.REIMBURSEMENT_NOTE=Imprimir reembolso
+
+# AnullDebitEntriesStrategy
+error.AnullDebitEntriesStrategy.debitEntry.invalid = Linha {0}: O identificador da dívida <strong>{1}</strong> é inválido.
+error.AnullDebitEntriesStrategy.debitEntryDescription.invalid = Linha {0}: A descrição da dívida <strong>{1}</strong> é inválido: <strong>{2}</strong>.
+error.AnullDebitEntriesStrategy.debitEntry.already.annuled = Linha {0}: A dívida já está anulada.
+error.AnullDebitEntriesStrategy.customerName.invalid = Linha {0}: O nome do cliente <strong>{1}</strong> é inválido: <strong>{2}</strong>.
+error.AnullDebitEntriesStrategy.annullInClosedDebitNote.invalid = Linha {0}: O valor <strong>{1}</strong> para o campo <strong>Anular mesmo se fechado em nota de dívida?</strong> é inválido.
+error.AnullDebitEntriesStrategy.debitEntry.closed.in.debit.note = Linha {0}: A dívida está em uma nota de dívida fechada.
+error.AnullDebitEntriesStrategy.annulWithSettlementsValue.invalid = Linha {0}: O valor <strong>{1}</strong> para o campo <strong>Anular mesmo com liquidação?</strong> é inválido.
+error.AnullDebitEntriesStrategy.annullOtherEntriesInDebitNoteValue.invalid = Linha {0}: O valor <strong>{1}</strong> para o campo <strong>Anular também outros items na nota de dívida?</strong> é inválido.
+error.AnullDebitEntriesStrategy.debitEntry.in.debit.note.with.other.debit.entries = Linha {0}: A nota de dívida <strong>{1}</strong>, associado a dívida, tem outras dívidas agregadas.
+error.AnullDebitEntriesStrategy.debit.entry.with.settlements = Linha {0}: A dívida tem liquidações efectuadas.
+error.AnullDebitEntriesStrategy.result.empty = Não existem resultados.
+error.AnullDebitEntriesStrategy.on.anull.debit.entry = Linha {0}: Ocorreu um erro na anulação da dívida: <strong>{1}</strong>
+
+label.AnullDebitEntriesStrategy.anull.message = Anulado através de operações de tesouraria: '{0}'.
+label.AnullDebitEntriesStrategy.dataDescription = <strong>Motivo:</strong> {0}
+label.AnullDebitEntriesStrategy.identification = Identificador
+label.AnullDebitEntriesStrategy.customerName = Cliente
+label.AnullDebitEntriesStrategy.debitEntry.description = Item de dívida
+label.AnullDebitEntriesStrategy.debitEntry.amountToPay = Montante
+label.AnullDebitEntriesStrategy.openAmountToPay = Montante a pagamento
+label.AnullDebitEntriesStrategy.dueDate = Data de vencimento
+label.AnullDebitEntriesStrategy.finantialDocument = Documento financeiro
+
+#MassiveDebtGenerationRequest
+error.MassiveDebtGenerationRequest.invalid.sheet = A folha é inválida.
+
+# TuitionAcademicTaxGenerationStrategy
+label.TuitionAcademicTaxGenerationStrategy.dataDescription.tuitionPaymentPlanGroup = <strong>Plano de propina:</strong> {0}<br/><strong>Ano Lectivo:</strong> {1}<br/><strong>Data de lançamento:</strong> {2}
+label.TuitionAcademicTaxGenerationStrategy.dataDescription.academicTax = <strong>Taxa académica:</strong> {0}<br/><strong>Ano Lectivo:</strong> {1}<br/><strong>Data de lançamento:</strong> {2}
