--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -629,7 +629,7 @@ label.AcademicTaxDebtCreationBean.amount=Montante
 label.AcademicTaxDebtCreation.confirmAcademicTaxDebtCreation=Confirmar lançamento de dívida
 label.customer.PaymentReferenceCode.entity=Entidade
 label.customer.PaymentReferenceCode.reference=Referência
-label.Customer.fromPersonMerge=Fusão de aluno
+label.Customer.fromPersonMerge=Fusão de aluno ou correção de NIF
 
 error.AcademicTaxDebtCreation.tariff.not.found=Não foi encontrado um tarifário para a taxa académica.
 error.AcademicTaxDebtCreation.registration.required=A matrícula é obrigatória.
