Aggregate ERP tuition info type by erp tuition info product

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1154,9 +1154,10 @@ label.ERPTuitionInfoTypeAcademicEntry.extracurricular.description=Unidades extra
 
 # ERPTuitionInfo
 
-label.ERPTuitionInfo.title=Exportação de montantes de propinas
-label.ERPTuitionInfo.create.title=Exportar montante de propina
-label.ERPTuitionInfo.search=Consultar exportações
+label.ERPTuitionInfo.title=Especializações de propina
+label.ERPTuitionInfo.create.title=Criar especialização de propina
+label.ERPTuitionInfo.read.title=Detalhes da especialização de propina
+label.ERPTuitionInfo.search=Consultar especializações
 
 label.ERPTuitionInfo.search.pending.documents=Montantes pendentes
 
@@ -1191,7 +1192,7 @@ label.ERPTuitionInfo.is.success.false=Anulado
 
 # ERPTuitionInfoExportOperation
 
-error.ErpTuitionInfo.no.differences.from.last.successul.exportation=Não há diferenças sobre a ultima exportação enviada com sucesso.
+error.ErpTuitionInfo.no.differences.from.last.successul.exportation=Não há diferenças sobre a última especialização enviada ou o montante da primeira especialização é zero.
 error.ERPTuitionInfo.customer.not.student=O cliente não é aluno.
 error.ERPTuitionInfo.executionYear.requireD=O ano lectivo é obrigatório.
 error.ERPTuitionInfo.erpTuitionInfoType.required=A especialização de propina é obrigatória.
@@ -1201,8 +1202,8 @@ label.ERPTuitionInfoExportOperation.fromDate=De
 label.ERPTuitionInfoExportOperation.toDate=A
 label.ERPTuitionInfoExportOperation.erpTuitionInfoDocumentNumber=Nº doc.
 
-label.ERPTuitionInfoExportOperation.title=Logs de exportação de montantes de propina
-label.ERPTuitionInfoExportOperation.read.title=Detalhes do log de exportação de montantes de propinas
+label.ERPTuitionInfoExportOperation.title=Logs de exportação de especializações
+label.ERPTuitionInfoExportOperation.read.title=Detalhes do log de exportação da especialização
 label.ERPTuitionInfoExportOperation.executionDate=Data de execução
 label.ERPTuitionInfoExportOperation.executor=Responsável
 label.ERPTuitionInfoExportOperation.success=Sucesso
