Interface for academical acts block products (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -23,6 +23,7 @@ label.event.create=Criar
 label.event.delete=Remover
 label.event.upload=Upload
 label.event.add=Adicionar
+label.event.remove=Remover
 label.event.selectAll=Selecionar todos
 label.annull=Anular
 label.true=Sim
@@ -488,7 +489,8 @@ label.AcademicTreasurySettings.closeServiceRequestEmolumentsWithDebitNote=Fechar
 label.AcademicTreasurySettings.runAcademicDebtGenerationRuleOnNormalEnrolment=Correr regras para geração de dívida após inscrição
 label.AcademicTreasurySettings.improvementAcademicTax=Taxa de Melhoria
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
-label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos bloqueantes de actos académicos em caso de dívida
+label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos bloqueantes
+label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos não bloqueantes
 label.AcademicTreasurySettings.academicalActBlockingProduct=Produto
 label.AcademicTreasurySettings.academicalActBlockingProduct.active=[ACTIVO]
 label.AcademicTreasurySettings.academicalActBlockingProduct.inactive=[INACTIVO]
@@ -1284,3 +1286,6 @@ error.MassiveDebtGenerationRequest.invalid.sheet = A folha é inválida.
 # TuitionAcademicTaxGenerationStrategy
 label.TuitionAcademicTaxGenerationStrategy.dataDescription.tuitionPaymentPlanGroup = <strong>Plano de propina:</strong> {0}<br/><strong>Ano Lectivo:</strong> {1}<br/><strong>Data de lançamento:</strong> {2}
 label.TuitionAcademicTaxGenerationStrategy.dataDescription.academicTax = <strong>Taxa académica:</strong> {0}<br/><strong>Ano Lectivo:</strong> {1}<br/><strong>Data de lançamento:</strong> {2}
+
+# ManageProductsForBlockAcademicalActs
+label.title.academictreasury.ManageProductsForBlockAcademicalActs=Gerir produtos para bloqueio de atos académicos
