Interface for academical acts block products (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -490,7 +490,7 @@ label.AcademicTreasurySettings.runAcademicDebtGenerationRuleOnNormalEnrolment=Co
 label.AcademicTreasurySettings.improvementAcademicTax=Taxa de Melhoria
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
 label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos bloqueantes
-label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos não bloqueantes
+label.AcademicTreasurySettings.academicalActNonBlockingProducts=Produtos não bloqueantes
 label.AcademicTreasurySettings.academicalActBlockingProduct=Produto
 label.AcademicTreasurySettings.academicalActBlockingProduct.active=[ACTIVO]
 label.AcademicTreasurySettings.academicalActBlockingProduct.inactive=[INACTIVO]
@@ -1289,3 +1289,4 @@ label.TuitionAcademicTaxGenerationStrategy.dataDescription.academicTax = <strong
 
 # ManageProductsForBlockAcademicalActs
 label.title.academictreasury.ManageProductsForBlockAcademicalActs=Gerir produtos para bloqueio de atos académicos
+label.title.academictreasury.ManageProductsForBlockAcademicalActs.addProductsToBlock=Adicionar produtos para bloqueio de atos académicos
