Interface for academical acts block products

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1288,5 +1288,15 @@ label.TuitionAcademicTaxGenerationStrategy.dataDescription.tuitionPaymentPlanGro
 label.TuitionAcademicTaxGenerationStrategy.dataDescription.academicTax = <strong>Taxa académica:</strong> {0}<br/><strong>Ano Lectivo:</strong> {1}<br/><strong>Data de lançamento:</strong> {2}
 
 # ManageProductsForBlockAcademicalActs
+
 label.title.academictreasury.ManageProductsForBlockAcademicalActs=Gerir produtos para bloqueio de atos académicos
 label.title.academictreasury.ManageProductsForBlockAcademicalActs.addProductsToBlock=Adicionar produtos para bloqueio de atos académicos
+label.title.academictreasury.ManageProductsForBlockAcademicalActs.removeBlockingProducts=Remover produtos para não bloquear atos académicos
+
+label.ManageProductsForBlockAcademicalActs.addProducts.confirm.title=Adicionar produtos para bloqueio de atos académicos
+label.ManageProductsForBlockAcademicalActs.addProducts.confirm.message.singular=Será adicionado 1 produto selecionado. Deseja continuar?
+label.ManageProductsForBlockAcademicalActs.addProducts.confirm.message=Serão adicionados {numberOfProducts} produtos selecionados. Deseja continuar?
+
+label.ManageProductsForBlockAcademicalActs.removeProducts.confirm.title=Remover produtos para não bloquear atos académicos
+label.ManageProductsForBlockAcademicalActs.removeProducts.confirm.message.singular=Será removido 1 produto selecionado. Deseja continuar?
+label.ManageProductsForBlockAcademicalActs.removeProducts.confirm.message=Serão removidos {numberOfProducts} produtos selecionados. Deseja continuar?
