Compress debts report file to zip Split debts report sheets to three files Filter debts report debit and credit entries by versioning date

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -802,6 +802,11 @@ label.DebtReportRequest.sibsTransactionDetailSheetName=Transacções SIBS
 label.DebtReportRequest.treasuryExemptionSheetName=Isenções
 label.DebtReportRequest.productsSheetName=Produtos
 
+label.DebtReportRequest.zip.file.warning.message=<strong>Atenção:</strong> face ao elevado volume de dados, o relatório passa a ser gerado em formato ZIP, contendo três ficheiros distintos:\
+<ul><li><strong>Dívidas e créditos</strong></li>\
+<li><strong>Pagamentos</strong></li>\
+<li><strong>Informação várias</strong>&nbsp;<em>(contas correntes, isenções, listagem de produtos, etc.)</em></li></ul> 
+
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
 error.DebtReportRequest.endDate.required = Data de fim obrigatória
 error.DebtReportRequest.type=Tipo de relatório obrigatório
@@ -812,8 +817,10 @@ error.DebtReportEntryBean.report.generation.verify.entry=Erro. Verifique a entra
 
 error.DebtReportRequestResultFile.debtReportRequest.required=O pedido é obrigatório
 
-label.DebtReportRequestResultFile.INVOICE_ENTRIES.filename=Relatorio_Dividas_{0}.xlsx
+label.DebtReportRequestResultFile.INVOICE_ENTRIES.filename=Relatorio_Dividas_Creditos_{0}.xlsx
 label.DebtReportRequestResultFile.SETTLEMENT_ENTRIES.filename=Relatorio_Pagamentos_{0}.xlsx
+label.DebtReportRequestResultFile.OTHER.filename=Relatorio_Tesouraria_{0}.xlsx
+label.DebtReportRequestResultFile.ZIP.filename=Relatorio_Dividas_Pagamentos_{0}.zip
 label.DebtReportRequestResultErrorsFile.filename=Erros_{0}.txt
 
 # manageDebtReportRequests
