Show debt report file size Include sibs transactions and payment codes as 4th debt report

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -36,7 +36,7 @@ label.error.delete=Erro ao eliminar devido a
 label.error.upload=Erro ao fazer upload do ficheiro devido a 
 label.summary=Sumário
 label.success.delete=Registo eliminado com sucesso
-label.success.update=Registo eliminado com sucesso
+label.success.update=Registo actualizado com sucesso
 label.success.upload=Upload feito com sucesso
 label.success.create=Registo criado com sucesso
 label.total=Total a pagar
@@ -802,9 +802,10 @@ label.DebtReportRequest.sibsTransactionDetailSheetName=Transacções SIBS
 label.DebtReportRequest.treasuryExemptionSheetName=Isenções
 label.DebtReportRequest.productsSheetName=Produtos
 
-label.DebtReportRequest.zip.file.warning.message=<strong>Atenção:</strong> face ao elevado volume de dados, o relatório passa a ser gerado em formato ZIP, contendo três ficheiros distintos:\
+label.DebtReportRequest.zip.file.warning.message=<strong>Atenção:</strong> face ao elevado volume de dados, o relatório passa a ser gerado em formato ZIP, contendo quatro ficheiros distintos:\
 <ul><li><strong>Dívidas e créditos</strong></li>\
 <li><strong>Pagamentos</strong></li>\
+<li><strong>Referências MB e Transações SIBS</strong></li>\
 <li><strong>Informação várias</strong>&nbsp;<em>(contas correntes, isenções, listagem de produtos, etc.)</em></li></ul> 
 
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
@@ -819,6 +820,7 @@ error.DebtReportRequestResultFile.debtReportRequest.required=O pedido é obrigató
 
 label.DebtReportRequestResultFile.INVOICE_ENTRIES.filename=Relatorio_Dividas_Creditos_{0}.xlsx
 label.DebtReportRequestResultFile.SETTLEMENT_ENTRIES.filename=Relatorio_Pagamentos_{0}.xlsx
+label.DebtReportRequestResultFile.PAYMENT_CODES.filename=Relatorio_ReferenciasMB_Transacoes_SIBS_{0}.xlsx
 label.DebtReportRequestResultFile.OTHER.filename=Relatorio_Tesouraria_{0}.xlsx
 label.DebtReportRequestResultFile.ZIP.filename=Relatorio_Dividas_Pagamentos_{0}.zip
 label.DebtReportRequestResultErrorsFile.filename=Erros_{0}.txt
