Avoid creation of ERP tuition info document if one is pending. ERP documents must be immutable in order to try to guarantee delta values match between FenixEdu and ERP.

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1208,6 +1208,7 @@ error.ERPTuitionInfo.customer.not.student=O cliente não é aluno.
 error.ERPTuitionInfo.executionYear.requireD=O ano lectivo é obrigatório.
 error.ERPTuitionInfo.erpTuitionInfoType.required=A especialização de propina é obrigatória.
 error.ERPTuitionInfo.event.define.some.of.the.products.of.type.but.not.all=O evento académico contêm pelo menos uma dívida não especificada na especialização: Nº {0}, Nome: {1}, Especialização: {2}
+error.ERPTuitionInfo.pending.to.export=O documento '{0}' encontra-se pendente. Este documento deverá ser integrado no ERP. 
 
 label.ERPTuitionInfoExportOperation.fromDate=De
 label.ERPTuitionInfoExportOperation.toDate=A
