Remove dependency of fenixedu-ulisboa-tools (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -333,7 +333,7 @@ label.TuitionInstallmentTariff.vat=IVA (%)
 label.TuitionInstallmentTariff.noDueDate=Sem data de vencimento
 label.TuitionInstallmentTariff.bestOfFixedDateAndDaysAfterCreation=&nbsp;ou {0} dias após a criação do item de dívida depois da data indicada
 
-label.TupleDataSourceBean.select.description=Seleccione uma opção
+label.TreasuryTupleDataSourceBean.select.description=Seleccione uma opção
 
 error.TuitionInstallmentTariff.tuitionPaymentPlan.required=O plano de propinas é obrigatório.
 error.TuitionInstallmentTariff.installmentOrder.must.be.positive=A número da prestação tem de ser positiva.
