Tuition extention services

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -188,6 +188,7 @@ label.AcademicTreasuryEventKeys.TOTAL_ECTS_OR_UNITS=Total de Unidades ou ECTS po
 label.AcademicTreasuryEventKeys.COURSE_FUNCTION_COST=Custo de funcionamento da disciplina
 label.AcademicTreasuryEventKeys.DEFAULT_TUITION_TOTAL_AMOUNT=Total da propina principal
 label.AcademicTreasuryEventKeys.USED_DATE=Data usada para lançamento da dívida
+label.AcademicTreasuryEventKeys.EFFECTIVE_TUITION_PAYMENT_PLAN=Plano de propinas baseado
 
 error.Tariff.cannot.delete=Não é possível remover o tarifário. Verifique se não tem items de dívidas associadas.
 
