Do not consider inactive registrations in massive debit entry exemptions

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1130,6 +1130,8 @@ error.ExemptionsGenerationRequestFile.result.empty=A folha não tem nenhuma isenç
 error.ExemptionsGenerationRequestFile.event.has.no.debitEntries=Linha {0}: Não foram encontradas dívidas no evento académico <strong>{1}</strong>.
 error.ExemptionsGenerationRequestFile.event.found.more.than.one.debit.entry=Linha {0}: Foi encontrada mais do que uma dívida no evento académico <strong>{1}</strong>. Especifique a dívida na coluna <strong>Item de dívida</strong>.
 error.ExemptionsGenerationRequestFile.unable.to.create.exemption=Linha {0}: A isenção não foi lançada para o aluno <strong>{1} - {2}</strong> devido ao seguinte motivo: <strong>{3}</strong>
+error.ExemptionsGenerationRequestFile.found.more.than.one.registration=Linha {0}: Foi encontrada mais do que uma matrícula ativa para o aluno e respectivo curso
+ 
 
 label.ExemptionsGenerationRequestFile.title=Lançamento de isenções
 label.ExemptionsGenerationRequestFile.search=Pedidos para lançamento de isenções
